sema/testdata/gcc-c99-extra/accept/Wc90-c99-compat-9.c
extern void bar (int);

void
foo (int n)
{
  for (int i = 0; i < n; i++)
    bar (i);
}
